--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -15,6 +15,7 @@
     <base href="[[.AppSubUrl]]/" />
 
     <link rel="icon" type="image/png" href="[[.FavIcon]]" />
+    <!-- <link rel="icon" type="image/png" href="[[.ContentDeliveryURL]]public/img/jwf.png" /> -->
     <link rel="apple-touch-icon" sizes="180x180" href="[[.AppleTouchIcon]]" />
     <link rel="mask-icon" href="[[.ContentDeliveryURL]]public/img/grafana_mask_icon.svg" color="#F05A28" />
 
@@ -180,7 +181,7 @@
           <div class="preloader__logo"></div>
         </div>
       </div>
-      <div class="preloader__text">Loading Grafana</div>
+      <div class="preloader__text">Loading</div>
       <div class="preloader__text preloader__text--fail">
         <p>
           <strong>If you're seeing this Grafana has failed to load its application files</strong>
