--- a/public/sass/_variables.dark.generated.scss
+++ b/public/sass/_variables.dark.generated.scss
@@ -113,8 +113,8 @@ $text-shadow-faint: 1px 1px 4px rgb(45, 45, 45);
 $textShadow: none;
 
 // gradients
-$brand-gradient-horizontal: linear-gradient(270deg, #F55F3E 0%, #FF8833 100%);
-$brand-gradient-vertical: linear-gradient(0.01deg, #F55F3E 0.01%, #FF8833 99.99%);
+$brand-gradient-horizontal: linear-gradient(to right, #5c8e45, #8DBF69, #5c8e45);
+$brand-gradient-vertical: linear-gradient(to right bottom, #5c8e45, #6f9d4e);
 
 // Links
 // -------------------------
