--- a/public/sass/_variables.light.generated.scss
+++ b/public/sass/_variables.light.generated.scss
@@ -108,8 +108,8 @@ $text-blue: #1F62E0;
 $text-shadow-faint: none;
 
 // gradients
-$brand-gradient-horizontal: linear-gradient(90deg, #5C8E45 0%, #6f9d4e 100%);
-$brand-gradient-vertical: linear-gradient(0.01deg, #5C8E45 -31.2%, #6f9d4e 113.07%);
+$brand-gradient-horizontal: linear-gradient(to right, #5c8e45, #8DBF69, #5c8e45);
+$brand-gradient-vertical: linear-gradient(to right bottom, #5c8e45, #6f9d4e);
 
 // Links
 // -------------------------
